# fast-convolution-rtl

./: .gitignore  AUTHORS.rst  AUTHORS.sublime-project  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  blahut10.2fnt.ipynb  blahut2.8crt.ipynb  blahut3.8winograd4.ipynb  blahut5.2toom-cook.ipynb  blahut5.2toom-cook2x3.ipynb  blahut5.2toom-cook3x3-shift.ipynb  blahut5.2toom-cook3x3.ipynb  blahut5.2toom-cook4x3.ipynb  blahut5.3winograd-modified-generalized.ipynb  blahut5.3winograd-modified.ipynb  blahut5.3winograd-modified3x3.ipynb  blahut5.3winograd.ipynb  blahut5.3winograd2x2.ipynb  blahut5.4inspection.ipynb  blahut5.4winograd-modified3x3.ipynb  blahut5.5product-modulo.ipynb  blahut5.5product-modulox2c.ipynb  blahut5.5product-modulox4-1_0.ipynb  blahut5.5product-modulox4-1_1.ipynb  blahut5.6cyclic.ipynb  blahut5.6cyclic4x4.ipynb  blahut5.6cyclic8x8.ipynb  blahut6.2short.ipynb  blahut6.3iterated.ipynb  blahut6.3iterated16x16.ipynb  blahut6.3iterated2x2.ipynb  blahut6.3iterated4x4-tensor.ipynb  blahut6.3iterated4x4.ipynb  blahut6.3iterated8x8.ipynb  blahut_collection_cyclic_convolution.py  collection_cyclic_convolution.py  complex-numbers.ipynb  (+49 more)
.zed/: settings.json
debug/: debug.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
etc/: blahut6.3iterated4x4-explicacao.ipynb  blahut6.3iterated4x4.ipynb  blahut6.3iterated8x8-old.ipynb  blahut6.3iterated8x8.ipynb  debug.py  table-verilator.sh  template-bash-1d.sh  template-bash-2d.sh
fast_convolution.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
images/: laplace.json
lib/: cli.py  fast.py
notebooks/: blahut2.8crt.ipynb  blahut3.8winograd4.ipynb  blahut5.2toom-cook-block-diagram.ipynb  blahut5.2toom-cook.ipynb  blahut5.2toom-cook3x3-shift.ipynb  blahut5.2toom-cook3x3.ipynb  blahut5.2toom-cook4x3.ipynb  blahut5.3winograd(short).ipynb  blahut5.3winograd.ipynb  blahut5.4inspection.ipynb  blahut5.5product-modulo_.ipynb  blahut5.5product-modulox4a.ipynb  blahut5.6cyclic4x4.ipynb  blahut6.1cyclic-to-linear.ipynb  blahut6.3iterated.ipynb  blahut6.3iterated4x4-explicacao.ipynb  complex-numbers.ipynb  convolution_comparsion-2d.ipynb  convolve_2d_graph.ipynb  convolve_comparsion-2d.ipynb  convolve_comparsion.ipynb  convolve_comparsion_long.ipynb  convolve_comparsion_short_simple.ipynb  convolve_pure_python.ipynb  fast_convolution.py  fft.py  parhi8.5.2cyclic-to-linear.ipynb  parhi8.5.2cyclic-to-linear7x3.ipynb
notebooks/etc/: agarwal–cooley.ipynb  blahut5.4inspection-dev.ipynb  blahut6.3iterated16x16.ipynb  tolimieri6.4.1.ipynb  tolimieri6.5.8-5cyclic.ipynb
src/fast-convolution/: fconv.py
src/fast_convolution/: __init__.py  bind.py  build.py  cli.py  commands.py  config.py  examples.py  fast.py  fast_convolution.py  gui.py  latex.py  makefile.py  project.py  quant.py  readme.py  repo.py  simulation.py  utils.py
src/fast_convolution/c/: CMakeLists.txt  config.h  convolution.c  convolution.h  example.h  fast-conv-image.c  fast-conv.c  fast.c  fast.h  filter2d.c  main.c  naive.c  naive.h  simple-conv.c  util.c  util.h
src/fast_convolution/clib/: CMakeLists.txt  Makefile  build.h  fast-conv.c  fast-conv1d-float.c  fast-conv2d-float.c  fast-conv2d-iter-float.c  fast-conv2d-nest-float.c  filter1d-float.c  filter1d.c  filter2d-float.c  filter2d-iter-float.c  filter2d-iter.c  filter2d-nested-float.c  filter2d-nested.c  filter2d.c  matrix-mult.c  simple-conv.c
src/fast_convolution/clib/contrib/: CMakeLists.txt
src/fast_convolution/clib/libs/: convolution.c  convolution.h  convolution_float.c  util.c  util.h  util_float.c
src/fast_convolution/clib/libs/include/: convolution.h  convolution_float.h  util.h
src/fast_convolution/clib/riscv/: Makefile  fast_conv.h  run_riscv_verilator.sh
src/fast_convolution/clib/riscv/makefile-normal/: Makefile
src/fast_convolution/clib/riscv/makefile-optim/: Makefile
src/fast_convolution/clib/src/float/: fast-conv1d-float.c  fast-conv2d-iter-float.c  fast-conv2d-kron-float.c  fast-conv2d-nest-float.c  filter1d-float.c  filter2d-iter-float.c  filter2d-kron-float.c  filter2d-nest-float.c  filter2d-nested-float.c
src/fast_convolution/clib/src/float/lib/: convolution_float.c  util_float.c
src/fast_convolution/clib/src/float/lib/include/: convolution_float.h  util_float.h
src/fast_convolution/clib/src/int/: filter1d.c  filter2d-iter.c  filter2d-kron.c  filter2d-nest.c  filter2d-nested.c  matrix-mult.c  simple-conv.c
src/fast_convolution/clib/src/int/include/: fast_conv.h
src/fast_convolution/clib/src/int/include/common/: convolution.h
src/fast_convolution/clib/src/int/lib/: convolution.c  fast_conv.c  fast_conv_optim.c  filter1dim.c  filter2dim_iter.c  filter2dim_nest.c  opt_fast_conv_iter.c  util.c
src/fast_convolution/clib/src/int/lib/common/: convolution.c
src/fast_convolution/clib/src/int/lib/conv/: convolution.c
src/fast_convolution/clib/src/int/lib/fast/: fast_conv.c  fast_conv_iter.c
src/fast_convolution/clib/src/int/lib/fast_optim/: fast_conv_iter.c
src/fast_convolution/clib/src/int/lib/include/: convolution.h  fast_conv.h  util.h
src/fast_convolution/clib/src/int/lib_optim/: fast_conv_iter.c  fast_conv_nest.c
src/fast_convolution/clib/test/test1d/: build.h
src/fast_convolution/clib/test/test2d/: build_float.h
src/fast_convolution/clib/test1d/: build.h  build_float.h  config.h  example.h  example_float.h  init.h  sim.h  sim_float.h
src/fast_convolution/clib/test2d/: bind_nest.h  example.h  example_nest.h  sim.h  sim_float.h
src/fast_convolution/clib/x86/: CMakeLists.txt
test/: 1d-manual.py  1d.py  1d2.py  1d3.py  2d.py  2d3_nest.py  2d4-iter.py  common.py  conftest.py  lib.py  test.py  test_1d.py  test_2d.py  test_runner.py  test_utils_unit.py
test/1d/: cli.py  cmd.json  debug.py  func.py  runner.py
test/1d3/: cmd.json  runner.py
test/2d/: cli.py  func.py
test/2d/clib/x86/: CMakeLists.txt
test/2d23_nest/: cli.py  runner.py
test/2d2_iter/: cmd.json
test/2d2_nest/: cmd.json
test/2d3_iter/: cmd.json
tests/: __init__.py  test.py  test_fast_convolution.py
(+903 files in other folders)
