[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_convolution"
version = "0.0.1"
description = "Package that implement some fast convolution algoritms"
readme = "README.rst"
authors = [
  {name = "Társio Onofrio Cardoso da Silva", email = "tarsio.onofrio@edu.pucrs.br"}
]
maintainers = [
  {name = "Társio Onofrio Cardoso da Silva", email = "tarsio.onofrio@edu.pucrs.br"}
]
classifiers = [

]
license = {text = "Not open source"}
[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

# https://stackoverflow.com/a/73600610/2850407
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
# where = ["src"]  # list of folders that contain the packages (["."] by default)
# include = ["my_package*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["notebooks*", ".*"]  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.hatch.build]
# exclude = [
#  "/.*",
#  "/notebooks*",
# ]


[project.scripts]
fast-conv = "fast_convolution.cli:main"
fc = "fast_convolution.cli:main"

[project.urls]
bugs = "https://github.com/tarsioonofrio/fast_convolution/issues"
changelog = "https://github.com/tarsioonofrio/fast_convolution/blob/master/changelog.md"
homepage = "https://github.com/tarsioonofrio/fast_convolution"

[tool.setuptools]
package-dir = {"" = "src"}
# package-dir = {"src" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
